--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Chestirito/bamazon#readme",
   "dependencies": {
+    "easy-table": "^1.1.1",
     "inquirer": "^6.1.0",
     "mysql": "^2.16.0"
   }
